--- a/css/style.css
+++ b/css/style.css
@@ -161,19 +161,23 @@ body {
   margin-left: auto;
   margin-right: auto;
   background: #2e2f42;
+  
 }
 .hero-container {
-  padding-top: 188px;
+  /* padding-top: 188px;
   padding-bottom: 292px;
   padding-left: 331px;
-  padding-right: 331px;
-}
-.hero-content-wrapper{
+  padding-right: 331px; */
+  padding: 188px 0;
   display: flex;
-/* padding-left: 495px;
-padding-right: 495px; */
-align-items: center;
+  align-items: center;
 }
+/* .hero-content-wrapper{
+  display: flex;
+padding-left: 495px;
+padding-right: 495px;
+align-items: center;
+} */
 
 .hero-name {
   font-family: "Roboto", sans-serif;
@@ -202,6 +206,7 @@ bottom: none;
   color: #fff;
   background-color: #4d5ae5;
   display: block;
+  border: none;
 }
 
 .order-button-s:hover,
