--- a/css/style.css
+++ b/css/style.css
@@ -161,23 +161,20 @@ body {
   margin-left: auto;
   margin-right: auto;
   background: #2e2f42;
-  
+  padding: 188px 0;
 }
 .hero-container {
   /* padding-top: 188px;
   padding-bottom: 292px;
   padding-left: 331px;
   padding-right: 331px; */
-  padding: 188px 0;
-  display: flex;
-  align-items: center;
 }
-/* .hero-content-wrapper{
+.hero-content-wrapper{
   display: flex;
-padding-left: 495px;
-padding-right: 495px;
+/* padding-left: 495px;
+padding-right: 495px; */
 align-items: center;
-} */
+}
 
 .hero-name {
   font-family: "Roboto", sans-serif;
@@ -194,6 +191,7 @@ align-items: center;
 }
 
 .order-button-s {
+  border: none;
   min-width: 169px;
 height: 56px;
 border-radius: 4px;
@@ -206,7 +204,6 @@ bottom: none;
   color: #fff;
   background-color: #4d5ae5;
   display: block;
-  border: none;
 }
 
 .order-button-s:hover,
