--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ img {
 
 
 
+.header-container {
+  display: flex;
+  align-items: center;
+}
 
 body {
   font-family: "Roboto", sans-serif;
@@ -48,11 +52,6 @@ body {
 }
 
 /* Стилі для Header */
-
-.header-container {
-  display: flex;
-  align-items: center;
-}
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
@@ -162,14 +161,15 @@ body {
   margin-left: auto;
   margin-right: auto;
   background: #2e2f42;
+  padding: 188px 0;
   
 }
-.hero-container {
+/* .hero-container {
   padding-top: 188px;
   padding-bottom: 292px;
   padding-left: 331px;
   padding-right: 331px;
-}
+} */
 .hero-content-wrapper{
   display: flex;
 /* padding-left: 495px;
@@ -205,6 +205,7 @@ bottom: none;
   color: #fff;
   background-color: #4d5ae5;
   display: block;
+  
 }
 
 .order-button-s:hover,
