--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,8 @@ body {
   margin-right: auto;
   background: #2e2f42;
   padding: 188px 0;
+  align-items: center;
+  display: flex;
   
 }
 /* .hero-container {
@@ -216,10 +218,11 @@ bottom: none;
 /* Our benefits */
 
 .benefits{
-  margin-top: 120px;
-  margin-bottom: 120px;
+  /* margin-top: 120px;
+  margin-bottom: 120px; */
   margin-left: 156px;
   margin-right: 156px;
+  padding: 120px 0;
 }
 
 .benefits-ls{
