--- a/css/style.css
+++ b/css/style.css
@@ -224,13 +224,13 @@ bottom: none;
 
 .visually-hidden {
   overflow: hidden;
-  /* position: absolute;
+  position: absolute;
   width: 1px;
   height: 1px;
   padding: 0;
   margin: -1px;
   clip: rect(0, 0, 0, 0);
-  border: 0; */
+  border: 0;
 }
 
 .benefits-ls {
