--- a/css/style.css
+++ b/css/style.css
@@ -223,14 +223,15 @@ bottom: none;
 }
 
 .visually-hidden {
-  overflow: hidden;
+  visibility: hidden;
+  /* overflow: hidden;
   position: absolute;
   width: 1px;
   height: 1px;
   padding: 0;
   margin: -1px;
   clip: rect(0, 0, 0, 0);
-  border: 0;
+  border: 0; */ 
 }
 
 .benefits-ls {
