--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ height: 380px; */
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .team-ds {
