--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,12 @@ height: 380px; */
   gap: 24px;
 } */
 
+.portfolio-info{
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 .our-portfolio {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
@@ -374,8 +380,8 @@ height: 380px; */
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-top: 32px;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
+  
 }
 
 .portfolio-ds {
