--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,10 @@ padding-right: 495px; */
   padding: 120px 0;
 }
 
-.container .visually-hidden {
+ .visually-hidden:hover {
+  visibility: visible;
+}
+ /* {
   overflow: hidden;
   position: absolute;
   width: 1px;
@@ -226,7 +229,7 @@ padding-right: 495px; */
   margin: -1px;
   clip: rect(0, 0, 0, 0);
   border: 0;
-}
+} */
 
 .benefits-ls {
   display: flex;
