--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #2e2f42;
+  text-decoration: none;
 }
 
 .logo {
@@ -88,6 +89,7 @@ body {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
+  text-decoration: none;
 }
 /* ===================== */
 .item-name {
@@ -99,6 +101,7 @@ body {
   color: #2e2f42;
   padding: 24px 0;
   display: block;
+  text-decoration: none;
 }
 
 .menu-item-studio .item-name {
@@ -137,12 +140,14 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
   font-style: normal;
+  text-decoration: none;
 }
 
 .page-adress {
   text-transform: inherit;
   font-style: normal;
   margin-left: auto;
+  
 }
 
 .menu-link:hover,
@@ -154,26 +159,12 @@ body {
 
 .hero {
   background-color: #2e2f42;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
-  background: #2e2f42;
+  /* max-width: 1440px; */
   padding: 188px 0;
-  align-items: center;
-  display: flex;
+  /* align-items: center; */
+  /* display: flex; */
 }
-/* .hero-container {
-  padding-top: 188px;
-  padding-bottom: 292px;
-  padding-left: 331px;
-  padding-right: 331px;
-} */
-.hero-content-wrapper {
-  display: flex;
-  /* padding-left: 495px;
-padding-right: 495px; */
-  align-items: center;
-}
+
 
 .hero-name {
   font-family: "Roboto", sans-serif;
@@ -183,10 +174,12 @@ padding-right: 495px; */
   padding-right: 32px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
+  text-align:center;
   color: #fff;
   margin-bottom: 48px;
-  max-width: 496px;
+  max-width: 600px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .order-button-s {
@@ -203,6 +196,8 @@ padding-right: 495px; */
   color: #fff;
   background-color: #4d5ae5;
   display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .order-button-s:hover,
@@ -212,8 +207,6 @@ padding-right: 495px; */
 
 /* Our benefits */
 .benefits {
-  margin-left: 156px;
-  margin-right: 156px;
   padding: 120px 0;
 }
 
@@ -267,25 +260,20 @@ padding-right: 495px; */
 
 .team-ls {
   display: flex;
-  align-items: center;
-  margin-bottom: 120px;
+  flex-wrap: wrap;
+  /* align-items: center; */
+  /* margin-bottom: 120px; */
   gap: 24px;
 }
 
 .page-our-team {
   background-color: #f4f4fd;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
   padding: 120px 0;
-  max-height: 732px;
 }
 
 .team-ls .our-team-ls {
   background-color: #fff;
   border-radius: 0 0 4px 4px;
-  padding: 0px 0px 32px 0px;
   /* width: 264px;
 height: 380px; */
 }
@@ -342,19 +330,7 @@ height: 380px; */
   /* width: calc((100% - 48px) / 3); */
 }
 
-/* .li1 {
-  display: flex;
-  align-self: center;
-  gap: 24px;
-  margin-bottom: 48px;
-}
 
-.li2 {
-  margin-top: 48px;
-  display: flex;
-  align-self: center;
-  gap: 24px;
-} */
 
 .portfolio-info {
   padding: 32px 16px;
@@ -396,8 +372,6 @@ height: 380px; */
 /* FOOTER */
 .lower-page {
   background-color: #2e2f42;
-  width: 1440px;
-  height: 312px;
   padding: 100px 0;
 }
 
@@ -408,6 +382,7 @@ height: 380px; */
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
 
 .second-logo {
@@ -418,6 +393,7 @@ height: 380px; */
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
+  text-decoration: none;
 }
 
 .second-lg {
@@ -430,4 +406,5 @@ height: 380px; */
   color: #4d5ae5;
   display: inline-block;
   margin-bottom: 16px;
+  text-decoration: none;
 }
